[package]
name = "virtualport"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive", "env"] }
ctrlc = "3.2"
nix = { version = "0.29", features = ["term", "fs"] }
libc = "0.2.169"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
