[package]
name = "virtualport"
version = "0.1.3"
edition = "2021"
description = "A program to create a virtual serial port (PTY) with extended functionality."
authors = ["s00d <Virus191288@gmail.com>"]
license = "MIT"
repository = "https://github.com/s00d/virtualport"

[dependencies]
clap = { version = "4.2", features = ["derive", "env"] }
ctrlc = "3.2"
nix = { version = "0.29", features = ["term", "fs"] }
libc = "0.2.169"


[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
